--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body {
     font-weight: bold;
 }
 
+img {
+    display: block;
+}
 /*-----------------HEADER--------------*/
 
 .headertop-main { 
@@ -24,6 +27,7 @@ body {
 }
 .headertop-1 {
     display: flex;
+    margin-left: 90px;
 }
 
 .headertop-1content {
@@ -33,8 +37,10 @@ body {
 .headerbot {
     display: flex;
     justify-content: center;
-/*    border: solid 2px #E6E3E2;*/
-    margin: 0 250px;
+    margin: 0 360.5px;
+    border-radius: 50px;
+    box-shadow: 0 3px 12px 0 rgba(0, 0, 0, 0.1), 
+                0 1px 2px 0 rgba(0, 0, 0, 0.08);
 }
 .btn-left,
 .btn-right {
@@ -63,7 +69,7 @@ body {
 .btn-right img {
     height: 10px;
     justify-self: right;
-    background-color: red;
+    background-color: #ff385c;
     padding: 10px;
     border-radius: 50%;
 }
@@ -78,21 +84,23 @@ body {
 }
 /*------SEPARATEUR------*/
 .separateur{
-    margin: 20px -30px 0 -30px ;
+    margin: 30px -30px 20px -30px ;
     height: 1px;
+    border-top: solid 2px #E6E3E2;
 }
 /*------MAIN------*/
 /*nav*/
 nav {
-    margin: 20px -30px 0 -30px ;
-    border-top: solid 2px #E6E3E2;
+    margin: 30px -30px;
     display: flex;
     justify-content: space-around;
 }
-
+.nav-icon-container{
+    display: grid;
+}
 nav div img {
     width: 40px;
-    margin: 0 auto;
+    justify-self: center;
 }
 
 /*main*/
@@ -101,14 +109,14 @@ main {
     display: grid;
     grid-template-columns: 23% 23% 23% 23%;
     grid-column-gap: 35px;
-    grid-row-gap: 15px;
-    grid-template-rows: 350px 350px;
+    grid-row-gap: 35px;
+    grid-template-rows: 365px 365px;
     font-size: 14px;
 }
 
 .img-loc {
-    width: 270px;
-    height: 270px;
+    width: 282px;
+    height: 282px;
     border-radius: 10px;
 }
 .title-loc {
@@ -121,6 +129,10 @@ main {
 
 .title-loc~p{
     margin: 10px 0;
+}
+
+.statut {
+    font-weight: 700;
 }
 
 .logo-loc {
