--- a/style.css
+++ b/style.css
@@ -145,3 +145,16 @@ main {
     border-radius: 50%;
 }
 
+/*------FOOTER------*/
+footer {
+    background-color: #f7f7f7;
+    font-size: 12px;
+    display: flex;
+    justify-content: space-between;
+}
+footer ul {
+    display: flex;
+}
+li {
+    margin: 0 20px;
+}
