--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
 img {
     display: block;
 }
+
+.clean {
+    list-style-type: none;
+}
 /*-----------------HEADER--------------*/
 
 .headertop-main { 
@@ -37,14 +41,16 @@ img {
 .headerbot {
     display: flex;
     justify-content: center;
-    margin: 0 360.5px;
+    margin: 0 353px;
     border-radius: 50px;
     box-shadow: 0 3px 12px 0 rgba(0, 0, 0, 0.1), 
                 0 1px 2px 0 rgba(0, 0, 0, 0.08);
 }
 .btn-left,
 .btn-right {
+    font-size: 14px;
     background-color: white;
+    white-space: nowrap;
     border: solid 2px #E6E3E2;
     padding: 10px 20px;
     &:hover {
@@ -55,33 +61,30 @@ img {
 
 .btn-right {
     display: flex;
+    justify-content: space-between;
     border-radius: 0 30px 30px 0;
-    border-left: none;    
-}
-
-.btn-right p {
+    border-left: none;
     text-align: left;
-    padding-right: 90px;
     padding-left: 10px;
     border-left: solid 2px #E6E3E2;
 }
 
+
 .btn-right img {
     height: 10px;
-    justify-self: right;
     background-color: #ff385c;
     padding: 10px;
+    margin-left: 110px;
     border-radius: 50%;
 }
 
 .btn-left {
     border-radius: 30px 0 0 30px;
     border-right: none;
-}
-.btn-left p {
     text-align: left;
-    padding-right: 90px;
+    padding-right: 110px;
 }
+
 /*------SEPARATEUR------*/
 .separateur{
     margin: 30px -30px 20px -30px ;
@@ -137,8 +140,8 @@ main {
 
 .logo-loc {
     position: relative;
-    bottom: 260px;
-    left: 200px;
+    bottom: 275px;
+    left: 230px;
     width: 15px;
     background-color: white;
     padding: 15px;
@@ -156,5 +159,5 @@ footer ul {
     display: flex;
 }
 li {
-    margin: 0 20px;
+    margin: 0 30px 0 0;
 }
